--- a/app/src/main/res/layout/activity_relacionar_cliente.xml
+++ b/app/src/main/res/layout/activity_relacionar_cliente.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".RelacionarCliente">
 
+    <!-- Cabecera de la pantalla -->
     <RelativeLayout
         android:id="@+id/seccionAV1"
         android:layout_width="match_parent"
-        android:layout_height="90sp"
+        android:layout_height="@dimen/_35sdp"
         android:background="@drawable/backgroundverdeclaro"
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:layout_width="45sp"
-            android:layout_height="45sp"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20sp"
+            android:layout_marginLeft="@dimen/_12sdp"
             android:src="@drawable/logoredondo" />
 
         <!-- Texto del Nombre de Usuario -->
@@ -26,65 +27,65 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="80sp"
+            android:layout_marginLeft="@dimen/_43sdp"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="@dimen/_12sdp"
             android:textStyle="bold" />
 
     </RelativeLayout>
 
     <!-- Texto de Sugerencia -->
-    <TextView
-        android:id="@+id/titulo1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gris"
-        android:text="Ingresa los datos del cliente"
-        android:layout_below="@+id/seccionAV1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10sp"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
     <ScrollView
-        android:layout_width="280sp"
-        android:layout_height="490sp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/titulo1"
-        android:id="@+id/datoscliente">
+        android:id="@+id/datoscliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seccionAV1"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_10sdp">
 
         <RelativeLayout
             android:id="@+id/scrolleable"
-            android:layout_width="280sp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/seccionAV1" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/titulo1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Ingresa los datos del cliente"
+                android:textColor="@color/gris"
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold" />
 
             <!-- Texto de nombre de usuario -->
             <TextView
                 android:id="@+id/lbcliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
+                android:layout_below="@+id/titulo1"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="CLIENTE"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar usuario -->
             <AutoCompleteTextView
                 android:id="@+id/cliente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background"
                 android:layout_below="@id/lbcliente"
-                android:padding="13sp"
-                android:layout_marginTop="5sp"
-                android:textColorHint="#FF0000"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/background"
                 android:hint="*"
-                android:textColor="#0C7238"
                 android:inputType="text"
-                android:textSize="16sp"
-                android:layout_gravity="center_horizontal" />
+                android:padding="13sp"
+                android:textColor="#0C7238"
+                android:textColorHint="#FF0000"
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Texto de sucursal -->
             <TextView
@@ -92,26 +93,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cliente"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="SUCURSAL"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar sucursal -->
             <AutoCompleteTextView
                 android:id="@+id/sucursal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background"
                 android:layout_below="@id/lbsucursal"
-                android:padding="13sp"
-                android:layout_marginTop="5sp"
-                android:textColorHint="#FF0000"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/background"
                 android:hint="*"
-                android:textColor="#0C7238"
                 android:inputType="text"
-                android:textSize="16sp"
-                android:layout_gravity="center_horizontal" />
+                android:padding="13sp"
+                android:textColor="#0C7238"
+                android:textColorHint="#FF0000"
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Texto de NIT/CC/ID -->
             <TextView
@@ -119,10 +120,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/sucursal"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="NIT/C.C./IDENTIFICACIÓN"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar direccion -->
             <TextView
@@ -131,12 +132,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lbidentificacion"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/background"
                 android:inputType="text"
                 android:padding="13sp"
                 android:textColor="#0C7238"
-                android:textSize="16sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Texto de direccion -->
             <TextView
@@ -144,10 +145,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/identificacion"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="DIRECCIÓN"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar direccion -->
             <TextView
@@ -156,12 +157,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lbdireccion"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/background"
                 android:inputType="text"
                 android:padding="13sp"
                 android:textColor="#0C7238"
-                android:textSize="16sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Texto de telefono -->
             <TextView
@@ -169,10 +170,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/direccion"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="CIUDAD"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar direccion -->
             <TextView
@@ -181,12 +182,12 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lbciudad"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/background"
                 android:inputType="number"
                 android:padding="13sp"
                 android:textColor="#0C7238"
-                android:textSize="16sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Texto de telefono -->
             <TextView
@@ -194,10 +195,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/ciudad"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:text="TELÉFONO"
                 android:textColor="@color/black"
-                android:textSize="13sp" />
+                android:textSize="@dimen/_8sdp" />
 
             <!-- Capturar direccion -->
             <TextView
@@ -206,36 +207,34 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/lbtelefono"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/background"
                 android:inputType="number"
                 android:padding="13sp"
                 android:textColor="#0C7238"
-                android:textSize="16sp" />
+                android:textSize="@dimen/_8sdp" />
+
+            <Button
+                android:id="@+id/ConfirmarCliente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background2"
+                android:layout_below="@id/telefono"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:padding="@dimen/_4sdp"
+                android:text="CONFIRMAR"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_9sdp" />
 
         </RelativeLayout>
 
     </ScrollView>
 
-    <Button
-        android:id="@+id/ConfirmarCliente"
-        android:layout_width="280sp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background2"
-        android:layout_below="@id/datoscliente"
-        android:layout_marginTop="5sp"
-        android:text="CONFIRMAR"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_centerHorizontal="true"
-        />
-
     <RelativeLayout
-        android:layout_width="60sp"
-        android:layout_height="60sp"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/ConfirmarCliente"
-        android:layout_marginTop="10sp"
+        android:layout_below="@+id/datoscliente"
         android:background="@drawable/circuloverde">
 
         <ImageButton
@@ -253,5 +252,16 @@
         </ImageButton>
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/seppat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FROM SEPPAT SAS"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/_15sdp"
+        android:textSize="@dimen/_10sdp"
+        />
 
 </RelativeLayout>
